# tabular_knowledge

./: README.md  pyproject.toml
data/: train_mod.csv
src/client/: client.py
src/tabular_knowledge/: tabular_knowledge.py
