[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tabular_knowledge"
version = "0.0.8"
authors = [
  { name="Pritam Dodeja", email="pritam.dodeja@gmail.com" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
